objects/Trader_Logical_Id__c.object
<CustomObject>
    <description>Logical IDs for Canadian dealers</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trader Logical Id</relationshipLabel>
        <relationshipName>Trader_Logical_Ids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Logical Id will autopopulate to vAuto Account Number field upon Save&quot;</defaultValue>
        <label>Instructions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Trader Logical Id</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC{0}</displayFormat>
        <label>TC Logical ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trader Logical Id</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>